@@ -1,0 +1,74 @@
+<!--
+    Translation of CVS Revision: 1.5
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<h1>Utilisation de la s&eacute;lection automatique de la langue</h1>
+
+<P>
+  Pour obtenir la s&eacute;lection automatique de la langue, vous devez
+  indiquer &agrave; votre navigateur quel est votre langue pr&eacute;f&eacute;r&eacute;e. La
+  mani&egrave;re de le faire d&eacute;pend du navigateur.
+</P>
+
+<!--
+    Instructions taken from http://www.debian.org/intro/cn
+    Do not copy the whole page, we use only about 50 of the 400 lines.
+    !-->
+
+<DL>
+
+  <DT>Mozilla Firefox version 0.9 et suivantes</DT>
+  <DD>
+    GNU/Linux
+    <PRE>
+      Edition -&gt; Pr&eacute;ferences -&gt; G&eacute;n&eacute;ral -&gt; Langues
+    </PRE>
+  </DD>
+  <DD>
+    Microsoft Windows
+    <PRE>
+      Outils -&gt; Options -&gt; G&eacute;n&eacute;ral -&gt; Langues
+    </PRE>
+    Dans les versions plus anciennes, allez &agrave; <KBD>about:config</KBD>
+    et changez la valeur de <KBD>intl.accept_languages</KBD>.
+  </DD>
+  
+  <DT>Mozilla / Netscape 4.x et suivants</DT>
+  <DD>
+    <PRE>
+      Edition -&gt; Pr&eacute;f&eacute;rences -&gt; Navigateur -&gt; Langues
+    </PRE>
+    Note&nbsp;: avec Netscape 4.x, assurez-vous que vous s&eacute;lectionnez
+    la langue &agrave; partir des choix disponibles. Des utilisateurs ont
+    signal&eacute; des probl&egrave;mes parce qu'ils avaient saisi la langue
+    manuellement.
+  </DD>
+  
+  <DT>Microsoft Internet Explorer</DT>
+  <DD>
+    Microsoft Windows
+    <PRE>
+      Outils (ou Affichage ou Extras) -&gt; Options Internet -&gt; (G&eacute;n&eacute;ral) Langues
+    </PRE>
+  </DD>
+  <DD>
+    MacOS
+    <PRE>
+      Edition -&gt; Pr&eacute;f&eacute;rences -&gt; Navigateur Web -&gt; Langue/Police
+    </PRE>
+  </DD>
+</DL>
+
+<BR>
+Cette page est extraite de
+<A HREF="http://www.debian.org/intro/cn">Debian</A>, et donc sous
+Copyright &copy; 1997-2005
+<A HREF="http://www.spi-inc.org/">SPI</A>; lisez les <A
+href="http://www.debian.org/license" rel="copyright">termes de la license</A>.
+<BR>
+Debian est un marque d&eacute;pos&eacute;e de Software in the Public Interest, Inc.
