@@ -31,16 +31,16 @@
   exacte le jeu
   d'un musicien est ardu. M&ecirc;me si les bonnes hauteurs sont transmises par le biais
   d'un clavier MIDI (&agrave; l'oppos&eacute; d'un son enregistr&eacute;), il faut &eacute;galement que le rythme
-  soit correct. Par exemple, comment l'ordinateur fera-t'il la
+  soit correct. Par exemple, comment l'ordinateur fera-t-il la
   diff&eacute;rence entre une croche et une noire jou&eacute;e staccato&nbsp;? D'ailleurs, comment imprimer une pi&egrave;ce que vous ne sauriez
-  jouer de cette mani&egrave;re&nbsp;?
+  jouer de cette forme abstraite&nbsp;?
 </p>
 
 <h3>Il existe d'autres programmes de notation. Qu'a le votre
-  de sp&eacute;cial&nbsp;?</h3>
+  en particulier&nbsp;?</h3>
 
 <p>
-  Les &eacute;ditions modernes informatis&eacute;es ont
+  Les partitions modernes informatis&eacute;es ont
   un aspect terne et m&eacute;canique. Au contraire, nous essayons d'imiter les
   gravures traditionnelles dans l'aspect g&eacute;n&eacute;ral, les algorithmes de rendu
   et le graphisme des polices. De ce fait, nos impressions proposent
@@ -51,10 +51,10 @@
 <p>
 <ul>
 <li>
-  C'est souvent l'absence du subtilit&eacute; dans les divers espacements qui
+  C'est souvent l'absence de subtilit&eacute; dans les divers espacements qui
   provoque un aspect m&eacute;canique dans les &eacute;ditions informatis&eacute;es.
   <li>Afin d'&eacute;viter les chevauchements entre les diff&eacute;rents symboles,
-  ceux-ci sont fort espac&eacute;s, donnant un aspect tr&egrave;s "a&eacute;r&eacute;."
+  ceux-ci sont tr&egrave;s espac&eacute;s, donnant un aspect tr&egrave;s "a&eacute;r&eacute;".
   <li>La densit&eacute; de l'affichage correspond &agrave; cet aspect a&eacute;r&eacute;&nbsp;: les
   symboles sont g&eacute;n&eacute;ralement trop l&eacute;gers, et les lignes trop fines.
   <li>Un espacement large implique &eacute;galement un plus grand nombre de pages.
@@ -66,8 +66,8 @@
 
 <p>
   Ces d&eacute;tails tiennent de l'ordre du subconscient. Comparer la 
-  m&ecirc;me pi&egrave;ce, de pr&eacute;f&eacute;rence &agrave; la loupe, dans deux &eacute;ditions (l'une
-  traditionnelle, l'autre faite par ordinateur) est le meilleur moyen de
+  m&ecirc;me pi&egrave;ce, de pr&eacute;f&eacute;rence &agrave; la loupe, dans deux &eacute;ditions &ndash; l'une
+  traditionnelle, l'autre faite par ordinateur &ndash; est le meilleur moyen de
   s'en rendre compte. Un indice&nbsp;: la gravure traditionnelle est la reproduction
   photographique d'un travail manuel, et se reconna&icirc;t aux l&eacute;g&egrave;res
   irr&eacute;gularit&eacute;s de placement des symboles, et aux petites taches d&ucirc;es
@@ -83,7 +83,7 @@
   appel&eacute;s graveurs ou copistes.
 </p>
 
-<h3>Pourquoi tant s'int&eacute;resser &agrave; la gravure&nbsp;?</h3>
+<h3>Pourquoi vous int&eacute;ressez-vous tant &agrave; la gravure&nbsp;?</h3>
 <p>
   Nous estimons que la belle musique m&eacute;rite d'&ecirc;tre imprim&eacute;e avec qualit&eacute;.
 </p>
@@ -95,20 +95,20 @@
   exemple, une pi&egrave;ce sera plus facilement interpr&eacute;t&eacute;e si sa mise en page
   refl&egrave;te son caract&egrave;re. Un espacement r&eacute;duit limite le nombre de pages,
   et par cons&eacute;quent le nombre de tournes. Un syst&egrave;me (une &ldquo;ligne&rdquo;)
-  ayant un affichage horizontal unique sera plus facilement rep&eacute;rable
+  ayant un aspect horizontal diff&eacute;rent des autres sera plus facilement rep&eacute;rable
   dans le conducteur. Une partition imprim&eacute;e avec des symboles denses et
-  des lignes &eacute;paisses sera mieux visible de loin.
+  des lignes &eacute;paisses sera mieux lisible de loin.
 </p>
 
 <p>
-  <h3>Vous dites votre programme sp&eacute;cial&nbsp;; vous essayez de le vendre&nbsp;?</h3>
+  <h3>Vous dites que votre programme est sp&eacute;cial&nbsp;; vous essayez de le vendre&nbsp;?</h3>
 
 <p>
   Non. Il est distribu&eacute; gratuitement. Rendez-vous sur la <a
 					       href="../install">page de t&eacute;l&eacute;chargement</a>.
 </p>
 
-<h3>Il est gratuit maintenant, mais vous le vendrez plus tard&nbsp;?</h3>
+<h3>Il est gratuit maintenant, mais le vendrez-vous plus tard&nbsp;?</h3>
 
 <p>
   Non. Non seulement il est gratuit, mais nous fournissons &eacute;galement
@@ -135,7 +135,7 @@ Plusieurs choses sont faisables.
 <ul>
   <li>
     <p>
-      Dites nous combien vous appr&eacute;ciez LilyPond, nous aimons toujours
+      Dites-nous combien vous appr&eacute;ciez LilyPond, nous aimons toujours
       l'entendre&nbsp;: envoyez nous un courriel, ou une carte postale.
     </p>
     <blockquote>
@@ -151,12 +151,12 @@ Plusieurs choses sont faisables.
     </p>
   </li>
   <li>
-    Supportez directement le d&eacute;veloppement en envoyant un
+    Soutenez directement le d&eacute;veloppement en envoyant un
     <a href="doneet.html">don</a>.
   </li>
   <li>
-    Dites &agrave; tous combien vous appr&eacute;ciez LilyPond&nbsp;: publicit&eacute; veut
-    dire plus d'utilisateurs, ce qui est toujours b&eacute;n&eacute;fique. Donc,
+    Dites &agrave; tous combien vous appr&eacute;ciez LilyPond&nbsp;: de la publicit&eacute; signifie
+    plus d'utilisateurs, ce qui est toujours b&eacute;n&eacute;fique. Donc,
     
     <ul>
       <li>
@@ -205,7 +205,7 @@ Plusieurs choses sont faisables.
 </p>
 
 <p>
-  Certaines choses ne durent pas - les deux filles, leur violoncelle
+  Certaines choses ne durent pas &ndash; les deux filles, leur violoncelle
   et l'orchestre sont sortis de nos vies. Mais LilyPond a surv&eacute;cu
   durant tout ce temps. Il est devenu imposant et mature, avec une
   communaut&eacute; active et de bonnes perspectives. Le meilleur &eacute;tant le plaisir
@@ -228,13 +228,13 @@ Plusieurs choses sont faisables.
 <p>
   Non. Compiler LilyPond est un processus assez particulier. &Agrave; moins
   d'&ecirc;tre s&ucirc;r de ce que vous faites, il est recommand&eacute; d'utiliser les
-  paquets.
+  paquets pr&eacute;compil&eacute;s.
 </p>
 
 <h3>Quelle version devrais-je utiliser&nbsp;?</h3>
 <p>
   Nous utilisons le m&ecirc;me sch&eacute;ma de num&eacute;rotation que celui utilis&eacute; pour le
-  noyau Linux. Cel&agrave; veut dire que les versions mineures paires (1.4, 1.6, etc.)
+  noyau Linux. Cela veut dire que les versions mineures paires (1.4, 1.6, etc.)
   sont stables, tandis que les versions de d&eacute;veloppement sont num&eacute;rot&eacute;es
   avec des chiffres impairs (1.5, 1.7). &Agrave; moins de besoins particuliers,
   il vaut mieux choisir la branche stable.
@@ -266,7 +266,7 @@ Plusieurs choses sont faisables.
 Nous avons les exigences suivantes. Il doit
 <ul>
   <li>
-    utiliser ASCII,
+    utiliser le codage ASCII,
   </li>
   <li>
     &ecirc;tre suffisamment court pour &ecirc;tre tap&eacute; &agrave; la main,
@@ -290,7 +290,7 @@ Nous avons les exigences suivantes. Il doit
 </p>
 
 <h3>Le format LilyPond utilise des accolades et des backslashes,
-  il s'agit donc de TeX, non&nbsp;?</h3>
+  il s'agit donc de TeX, n'est-ce pas&nbsp;?</h3>
 
 <p>
   Non. La syntaxe est compl&egrave;tement diff&eacute;rente. Tex est un langage de macros,
@@ -325,7 +325,7 @@ Nous avons les exigences suivantes. Il doit
   Jetez un oeil au
   <a href="@DOC@v2.6/Documentation/user/out-www/lilypond.html#Tutorial">tutoriel</a>.
   Il est assez court, divis&eacute; en sous-parties facilement abordables,
-  et nous avons pass&eacute; beaucoup de temps &agrave; le paufiner.
+  et nous avons pass&eacute; beaucoup de temps &agrave; le peaufiner.
   Si vous pr&eacute;f&eacute;rez vous lancer tout de suite, vous pouvez acc&eacute;der
   au texte d'entr&eacute;e saisi pour chaque exemple en cliquant sur
   les extraits musicaux du tutoriel.
@@ -334,7 +334,7 @@ Nous avons les exigences suivantes. Il doit
 <h3>Pourriez-vous ajouter des param&egrave;tres aux macros de saisie&nbsp;?</h3>
 
 <p>
-  LilyPond ne poss&egrave;de pas de macros de saisie. Il supporte les identifiants&nbsp:
+  LilyPond ne poss&egrave;de pas de macros de saisie. Il supporte les identifiants&nbsp;:
   une partie de la saisie peut &ecirc;tre nomm&eacute;e, et le contenu de cet identifiant
   se substitue &agrave; son nom lorsqu'il est utilis&eacute;. Il ne s'agit d'ailleurs
   pas d'une substitution litt&eacute;rale&nbsp; c'est la repr&eacute;sentation interne de l'objet
@@ -345,7 +345,7 @@ Nous avons les exigences suivantes. Il doit
 <p>
   Non. La programmation avec substitutions de textes (macros) conduit
   &agrave; d'horribles probl&egrave;mes syntaxiques. Une interface de programmation
-  utilisant des macros est extr&egrave;mement sensible aux appellations
+  utilisant des macros est extr&ecirc;mement sensible aux appellations
   non pertinentes et aux d&eacute;tails de format.
 </p>
 
@@ -353,7 +353,7 @@ Nous avons les exigences suivantes. Il doit
   simple tache r&eacute;p&eacute;titive.</h3>
 <p>
   Peut-&ecirc;tre, mais n'oubliez pas que vous passerez sans doute plus de temps
-  &agrave; lire le .ly qu'&agrave; l'&eacute;crire. Souvent, un peu plus de texte n'est pas une
+  &agrave; lire le fichier .ly qu'&agrave; l'&eacute;crire. Souvent, un peu plus de texte n'est pas une
   mauvaise id&eacute;e. S'il s'agit de choses simples, vous pouvez tout aussi
   bien utiliser des pr&eacute;processeurs existants tels que CPP ou M4.
 </p>
@@ -496,7 +496,7 @@ Il existe &eacute;galement diff&eacute;rentes interfaces non graphiques&nbsp;:
 
 <h2>Support</h2>
 
-<h3>&Agrave; l'aide, impossible de l'installer ou de le compiler.
+<h3>Au secours, impossible de l'installer ou de le compiler.
 	O&ugrave; puis-je trouver de l'aide&nbsp;?</h3>
 
 <p>
@@ -508,7 +508,7 @@ Il existe &eacute;galement diff&eacute;rentes interfaces non graphiques&nbsp;:
   pour obtenir de l'aide.
 </p>
 
-<h3>&Agrave; l'aide, je n'arrive pas &agrave; lui faire faire quelque chose.
+<h3>Au secours, je n'arrive pas &agrave; lui faire faire quelque chose.
 	O&ugrave; puis-je trouver de l'aide&nbsp;?</h3>
 <p>
   Vous pouvez &eacute;crire &agrave; la liste lilypond-user (disponible sur <a
@@ -526,7 +526,7 @@ Il existe &eacute;galement diff&eacute;rentes interfaces non graphiques&nbsp;:
   Si votre saisie entraine un crash ou une sortie erron&eacute;e, c'est un bogue.
   Nous essayons de r&eacute;pondre aux rapports de bogue rapidement, et de les
   corriger d&egrave;s que possible. Nous avons besoin de reproduire et d'isoler
-  le probl&egrave;me pour cel&agrave;. Merci de nous aider en envoyant un bon rapport
+  le probl&egrave;me pour cela. Merci de nous aider en envoyant un bon rapport
   de bogue&nbsp;: un fichier d'entr&eacute;e qui reproduira le probl&egrave;me. Merci
   de le faire court, afin de facilement isoler le probl&egrave;me. N'oubliez pas 
   de pr&eacute;ciser la version que vous utilisez, ainsi que la plate-forme.
@@ -534,7 +534,7 @@ Il existe &eacute;galement diff&eacute;rentes interfaces non graphiques&nbsp;:
 				href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a>.
 </p>
 
-<h3>Pourriez vous ajouter cette fonctionnalit&eacute; pour moi&nbsp;?</h3>
+<h3>Pourriez-vous ajouter cette fonctionnalit&eacute; pour moi&nbsp;?</h3>
 
 <p>
   Nous lirons votre demande et y r&eacute;l&eacute;chirons, mais nous
@@ -548,7 +548,7 @@ Il existe &eacute;galement diff&eacute;rentes interfaces non graphiques&nbsp;:
   engager un des d&eacute;veloppeurs pour le r&eacute;aliser.
 </p>
 
-<h3>Mais c'est vraiment simple, &eacute;tendre la syntaxe de cette mani&egrave;re&hellip;</h3>
+<h3>Mais c'est vraiment simple, il faut simplement &eacute;tendre la syntaxe de cette mani&egrave;re&hellip;</h3>
 
 <p>
   Il est tentant de penser qu'inventer la syntaxe r&eacute;soud le probl&egrave;me.
